# Nimby-Agent

./: .gitignore  .railwayignore  Dockerfile.api  README.md  app.py  pyproject.toml  railway.toml
agents/: planning_analyst.py  streaming.py  tools.py
api/: deps.py  main.py
api/middleware/: auth.py  logging.py  tokens.py
api/routers/: auth.py  briefs.py  qa.py  search.py  site_context.py  submissions.py  subscriptions.py  tokens.py  watchers.py
api/schemas/: auth.py  briefs.py  qa.py  search.py  site_context.py  submissions.py  subscriptions.py  tokens.py  watchers.py
data/briefs/: PP-2023-2828.md  PP-2024-1442.md  PP-2024-1920.md  PP-2024-2431.md  PP-2024-2655.md  PP-2024-2739.md  PP-2024-450.md  PP-2025-1092.md  PP-2025-1510.md  PP-2025-1608.md  PP-2025-1846.md  PP-2025-1898.md  PP-2025-1902.md  PP-2025-1996.md  PP-2025-2134.md  PP-2025-2333.md  (+7 more)
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  railway.toml
pipeline/: brief.py  classify.py  embed.py  extract.py  geocode.py  llm_utils.py  process_batch.py  qa.py  retrieve.py  spatial.py  submission.py  verify_facts.py
plans/: Frontend.md  Pipeline.md  Scraper.md  Verification.md
reports/: PP-2023-2828_verification.json  PP-2024-450_verification.json  PP-2025-1608_verification.json  PP-2025-1846_verification.json  PP-2025-2534_verification.json
scraper/: __main__.py  detail.py  download.py  fetch.py  index.py  models.py  repository.py  run.py  test_parse.py
scripts/: backfill_geocodes.py  migrate_to_postgres.py
tests/: conftest.py  test_admin.py  test_auth.py  test_briefs.py  test_health.py  test_qa.py  test_scraper_index.py  test_search.py  test_site_context.py  test_spatial.py  test_submissions.py  test_subscriptions.py  test_tokens.py  test_units.py  test_watchers.py
ui/: components.py  state.py
workers/: email.py  notify.py  scheduler.py  webhook.py
(+67 files in other folders)
