[project]
name = "nsw-ppr-scraper"
version = "0.1.0"
description = "Scrape Planning Proposals from NSW Planning Portal"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tqdm>=4.66",
    "python-dateutil>=2.9",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
