[project]
name = "nsw-ppr-scraper"
version = "0.1.0"
description = "Scrape Planning Proposals from NSW Planning Portal"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tqdm>=4.66",
    "python-dateutil>=2.9",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pgvector",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "google-genai",
    "cohere",
    "rank-bm25",
    "geopy",
    "pyjwt>=2.8",
    "google-auth>=2.29",
    "google-adk>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
